# p2p-video-accelerator

./: .gitignore  paper.md  prompt.md  readme.md  uvicorn.pid
repeater/: readme.md
repeater/cpp/: CMakeLists.txt  USAGE.md
repeater/cpp/include/repeater/: codec.hpp  server.hpp
repeater/cpp/src/: codec.cpp  registry.cpp  server.cpp
repeater/python/: USAGE.md  test_repeater.py
repeater/python/repeater/: client.py
service/: CMakeLists.txt
service/nat-traversal/: CMakeLists.txt  readme.md
service/nat-traversal/include/nat_traversal/: nat_agent.hpp  nat_detector.hpp  nat_types.hpp
service/nat-traversal/src/: nat_agent.cpp  nat_detector.cpp
service/p2p/: CMakeLists.txt  readme.md
service/p2p/examples/: main.cpp
service/p2p/include/p2p/: data_api.hpp  dht.hpp  node.hpp  peer.hpp  protocol.hpp  router.hpp
service/p2p/src/: data_api.cpp  dht.cpp  node.cpp  peer.cpp  protocol.cpp  router.cpp
service/store/: CMakeLists.txt  readme.md
service/store/examples/: simple_demo.cpp
service/store/include/store/: store.hpp
service/store/src/: store.cpp
service/tcp-like/: CMakeLists.txt  ai-gen-1.md  readme.md
service/tcp-like/examples/: echo_client.cpp  echo_server.cpp
service/tcp-like/include/tcp_like/: reliable_session.hpp  udp_socket.hpp
service/tcp-like/src/: reliable_session.cpp  udp_socket.cpp
viewer/: ai-gen-1.md  project_structure.md  readme.md
viewer/p2p-video-viewer/: README.md
viewer/p2p-video-viewer/backend/: requirements.txt  uvicorn.pid
viewer/p2p-video-viewer/backend/app/: __init__.py  config.py  main.py
viewer/p2p-video-viewer/backend/app/api/: __init__.py  history.py  peers.py  search.py  settings.py  videos.py
viewer/p2p-video-viewer/backend/app/data/: __init__.py  history_data.py  mock_data.py  peer_data.py  settings_data.py  store.py  video_data.py
viewer/p2p-video-viewer/backend/app/models/: __init__.py  history.py  peer.py  settings.py  video.py
viewer/p2p-video-viewer/backend/app/services/: history_service.py  peer_service.py  settings_service.py  video_service.py
viewer/p2p-video-viewer/frontend/: .eslintignore  .eslintrc.js  package-lock.json  package.json  vue.config.js
viewer/p2p-video-viewer/frontend/public/: index.html
viewer/p2p-video-viewer/frontend/src/: App.vue  main.js
viewer/p2p-video-viewer/frontend/src/assets/css/: main.css
viewer/p2p-video-viewer/frontend/src/components/: NumberInput.vue  SearchBar.vue  StatusBar.vue  ToggleSwitch.vue
viewer/p2p-video-viewer/frontend/src/router/: routes.js
viewer/p2p-video-viewer/frontend/src/services/: api.js  historyApi.js  peerApi.js  searchApi.js  settingsApi.js  videoApi.js
viewer/p2p-video-viewer/frontend/src/utils/: constants.js
viewer/p2p-video-viewer/frontend/src/views/: HistoryPage.vue  HomePage.vue  PeerPage.vue  SearchPage.vue  SettingsPage.vue  VideoPage.vue
viewer/p2p-video-viewer/scripts/: start_backend.sh  start_frontend.sh
